# platform.core.pim.calendar-service

./: CMakeLists.txt  calendar-service.manifest  calendar-service.pc.in  calendar.pc  calendar.pc.in
build-util/: DB-schema-gen.c  Makefile  generator.sh  schema.sql
client/: CMakeLists.txt  cal_client_alert.c  cal_client_db.c  cal_client_db_helper.c  cal_client_db_helper.h  cal_client_dbus.c  cal_client_dbus.h  cal_client_handle.c  cal_client_handle.h  cal_client_ipc.c  cal_client_ipc.h  cal_client_reminder.c  cal_client_reminder.h  cal_client_service.c  cal_client_service.h  cal_client_service_helper.c  cal_client_service_helper.h  cal_client_utils.c  cal_client_utils.h  calendar-service2.pc  calendar-service2.pc.in
common/: CMakeLists.txt  cal_filter.c  cal_filter.h  cal_handle.c  cal_handle.h  cal_inotify.c  cal_inotify.h  cal_internal.h  cal_list.c  cal_list.h  cal_mutex.c  cal_mutex.h  cal_ondemand.c  cal_ondemand.h  cal_query.c  cal_query.h  cal_record.c  cal_record.h  cal_record_alarm.c  cal_record_attendee.c  cal_record_calendar.c  cal_record_event.c  cal_record_extended.c  cal_record_instance_allday.c  cal_record_instance_allday_extended.c  cal_record_instance_normal.c  cal_record_instance_normal_extended.c  cal_record_search.c  cal_record_timezone.c  cal_record_todo.c  cal_record_updated_info.c  cal_time.cpp  cal_time.h  cal_typedef.h  cal_utils.c  cal_utils.h  cal_vcalendar.c  cal_vcalendar.h  cal_vcalendar_make.c  cal_vcalendar_make.h  (+5 more)
common/dbus/: CMakeLists.txt  cal_dbus.c  cal_dbus.h  cal_dbus.xml  cal_dbus_helper.c  cal_dbus_helper.h
common/ipc/: cal_ipc.h  cal_ipc_marshal.c  cal_ipc_marshal.h  cal_ipc_marshal_alarm.c  cal_ipc_marshal_attendee.c  (+11 more)
debian/: changelog  control  libslp-calendar-0.install.in  libslp-calendar-0.postinst  libslp-calendar-dev.install.in  rules
dft/: CMakeLists.txt
dft/src/: dft_main.c  dft_util.c  dft_util.h
doc/: calendar_doc.h
include/: calendar-svc-errors.h  calendar-svc-provider.h  calendar-svc-struct.h  calendar.h  calendar2.h  calendar_db.h  calendar_errors.h  calendar_filter.h  calendar_internal.h  calendar_list.h  calendar_query.h  calendar_record.h  calendar_reminder.h  calendar_service.h  calendar_types.h  calendar_types2.h  calendar_vcalendar.h  calendar_view.h  cals-db-info.h  cals-internal.h
native/: CMakeLists.txt  cal_access_control.c  cal_access_control.h  cal_calendar.c  cal_calendar.h  cal_db.c  cal_db.h  cal_db_alarm.c  cal_db_alarm.h  cal_db_attendee.c  cal_db_attendee.h  cal_db_calendar.c  cal_db_calendar.h  cal_db_event.c  cal_db_event.h  cal_db_extended.c  cal_db_extended.h  cal_db_instance.c  cal_db_instance.h  cal_db_instance_helper.c  cal_db_instance_helper.h  cal_db_plugin_alarm.c  cal_db_plugin_attendee.c  cal_db_plugin_calendar.c  cal_db_plugin_event.c  cal_db_plugin_extended.c  cal_db_plugin_instance_allday.c  cal_db_plugin_instance_allday_extended.c  cal_db_plugin_instance_normal.c  cal_db_plugin_instance_normal_extended.c  cal_db_plugin_search.c  cal_db_plugin_timezone.c  cal_db_plugin_todo.c  cal_db_query.c  cal_db_query.h  cal_db_rrule.c  cal_db_rrule.h  cal_db_timezone.c  cal_db_timezone.h  cal_db_util.c  (+5 more)
packaging/: ALARM.acalendar-service.service  calendar-service-alarm.service  calendar-service.changes  calendar-service.conf.in  calendar-service.manifest  calendar-service.spec  calendar-serviced.service  calendar-serviced.socket  calendar.service  libslp-calendar.spec  org.tizen.CalendarService.dbus.service  org.tizen.calendar_service.dbus.conf.in  org.tizen.calendar_service.dbus.service
schema/: CMakeLists.txt  generator.sh  initdb.c  schema.sql
schema/db-gen/: Makefile
schema/header-gen/: schema-header-gen.c
server/: CMakeLists.txt  cal_access_control.c  cal_access_control.h  cal_server.c  cal_server.h  cal_server_account.c  cal_server_account.h  cal_server_alarm.c  cal_server_alarm.h  cal_server_calendar_delete.c  cal_server_calendar_delete.h  cal_server_contacts.c  cal_server_contacts.h  cal_server_dbus.c  cal_server_dbus.h  cal_server_ipc.c  cal_server_ipc.h  cal_server_ondemand.c  cal_server_ondemand.h  cal_server_reminder.c  cal_server_reminder.h  cal_server_schema.c  cal_server_schema.h  cal_server_service.c  cal_server_service.h  cal_server_update.c  cal_server_update.h  cal_server_zone.c  calendar-serviced.sh
server/db/: cal_db.c  cal_db.h  cal_db_instance.c  cal_db_instance.h  cal_db_instance_helper.c  cal_db_instance_helper.h  cal_db_plugin_alarm.c  cal_db_plugin_alarm_helper.c  cal_db_plugin_alarm_helper.h  cal_db_plugin_attendee.c  cal_db_plugin_attendee_helper.c  cal_db_plugin_attendee_helper.h  cal_db_plugin_calendar.c  cal_db_plugin_calendar_helper.c  cal_db_plugin_calendar_helper.h  cal_db_plugin_event.c  cal_db_plugin_event_helper.c  cal_db_plugin_event_helper.h  cal_db_plugin_extended.c  cal_db_plugin_extended_helper.c  cal_db_plugin_extended_helper.h  cal_db_plugin_instance_allday.c  cal_db_plugin_instance_allday_extended.c  cal_db_plugin_instance_normal.c  cal_db_plugin_instance_normal_extended.c  cal_db_plugin_search.c  cal_db_plugin_timezone.c  cal_db_plugin_timezone_helper.c  cal_db_plugin_timezone_helper.h  cal_db_plugin_todo.c  cal_db_query.c  cal_db_query.h  cal_db_rrule.c  cal_db_rrule.h  cal_db_util.c  cal_db_util.h
src/: cals-alarm.c  cals-alarm.h  cals-calendar.c  cals-calendar.h  cals-db.c  cals-db.h  cals-event.c  cals-ical-codec.c  cals-ical-codec.h  cals-ical-utils.c  cals-ical.c  cals-ical.h  cals-inotify.c  cals-inotify.h  cals-instance.c  cals-instance.h  cals-provider.c  cals-recurrence-utils.c  cals-recurrence-utils.h  cals-schedule.c  cals-schedule.h  cals-sqlite.c  cals-sqlite.h  cals-struct.c  cals-struct.h  cals-time.c  cals-time.h  cals-todo.c  cals-typedef.h  cals-tz-utils.c  cals-tz-utils.h  cals-utils.c  cals-utils.h
test/: Makefile  allday.c  calendar-test.c  eve-add.c  eve-del.c  eve-period.c  eve-see.c  ical-export.c  ical-import.c  ical-read.c  ical-write.c  instance-del.c  list.c  period.c  recur-add.c  schedule-test.c  test-alarm.c  test-log.h  timetest.c  timetest.h  todo-add.c  todo-period.c  utime.h  versiontest.c
