CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(calendar-service C CXX)

INCLUDE(FindPkgConfig)

SET(EXTRA_CFLAGS "-Wall -Werror-implicit-function-declaration -fvisibility=hidden")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${EXTRA_CFLAGS}")

SET(CLIENT calendar-service2)
SET(DAEMON calendar-serviced)
SET(PREFIX ${CMAKE_INSTALL_PREFIX})
ADD_DEFINITIONS("-DPREFIX=\"${PREFIX}\"")

EXECUTE_PROCESS(COMMAND build-util/generator.sh)

ADD_SUBDIRECTORY(client)
ADD_SUBDIRECTORY(server)
