INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/common/dbus)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/client)

FILE(GLOB CLIENT_SRCS
	${CMAKE_SOURCE_DIR}/common/dbus/*.c
	${CMAKE_SOURCE_DIR}/common/*.c*
	*.c)
SET(CLIENT_SRCS ${CLIENT_SRCS} ${CMAKE_SOURCE_DIR}/common/dbus/cal_dbus.c)
SET_SOURCE_FILES_PROPERTIES(${CMAKE_SOURCE_DIR}/common/dbus/cal_dbus.c
	PROPERTIES GENERATED TRUE)

pkg_check_modules(client_pkgs REQUIRED
	glib-2.0
	db-util
	sqlite3
	vconf
	alarm-service
	icu-i18n
	contacts-service2
	libtzplatform-config
	capi-appfw-package-manager
	dlog
	capi-base-common
	gio-2.0
	gio-unix-2.0)
INCLUDE_DIRECTORIES(${client_pkgs_INCLUDE_DIRS})
LINK_DIRECTORIES(${client_pkgs_LIBRARY_DIRS})

ADD_DEFINITIONS("-DCAL_IPC_CLIENT")
ADD_DEFINITIONS("-DCAL_DBUS_INTERFACE=\"${DBUS_INTERFACE}\"")

ADD_LIBRARY(${CLIENT} SHARED ${CLIENT_SRCS})
ADD_DEPENDENCIES(${CLIENT} GENERATED_DBUS_CODE)
TARGET_LINK_LIBRARIES(${CLIENT} ${client_pkgs_LIBRARIES})
SET_TARGET_PROPERTIES(${CLIENT} PROPERTIES VERSION ${FULLVER} SOVERSION ${MAJORVER})
INSTALL(TARGETS ${CLIENT} DESTINATION ${LIB_INSTALL_DIR})

# pc
CONFIGURE_FILE(${CLIENT}.pc.in ${CLIENT}.pc @ONLY)
INSTALL(FILES ${CLIENT}.pc DESTINATION ${LIB_INSTALL_DIR}/pkgconfig)

# header
FILE(GLOB CLIENT_HEADER ${CMAKE_SOURCE_DIR}/include/*.h)
INSTALL(FILES ${CLIENT_HEADER} DESTINATION ${INCLUDE_INSTALL_DIR}/${CLIENT})
