CMAKE_MINIMUM_REQUIRED(VERSION 2.6)
PROJECT(dft-calendar C)

SET(TC_SRCS
	./src/dft_main.c
	./src/dft_util.c
	)

SET(PREFIX "/usr")
SET(BINDIR "${PREFIX}/bin")
SET(OPTDIR "/usr/share/calendar-svc")

SET(LIBNAME calendar-service2)

IF("${CMAKE_BUILD_TYPE}" STREQUAL "")
	SET(CMAKE_BUILD_TYPE "Release")
ENDIF("${CMAKE_BUILD_TYPE}" STREQUAL "")
MESSAGE("Build type: ${CMAKE_BUILD_TYPE}")

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/include)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR}/api)
LINK_DIRECTORIES(${CMAKE_SOURCE_DIR})

INCLUDE(FindPkgConfig)
pkg_check_modules(tc_pkgs REQUIRED
	dlog
	glib-2.0
	)

FOREACH(flag ${tc_pkgs_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)

SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_C_FLAGS_DEBUG "-O0 -g")
SET(CMAKE_C_FLAGS_RELEASE "-O2")

FIND_PROGRAM(UNAME NAMES uname)
EXEC_PROGRAM("${UNAME}" ARGS "-m" OUTPUT_VARIABLE "ARCH")
IF("${ARCH}" STREQUAL "arm")
	ADD_DEFINITIONS("-DTARGET")
	MESSAGE("add -DTARGET")
ENDIF("${ARCH}" STREQUAL "arm")

ADD_DEFINITIONS("-DTC_LOG_PRINTF")
SET(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -Wl,--as-needed")

ADD_EXECUTABLE(${PROJECT_NAME} ${TC_SRCS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${tc_pkgs_LDFLAGS} ${LIBNAME})

INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${OPTDIR})

